--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.github.Ajian-studio:GADownloading:v1.0.2'
     implementation 'com.github.czy1121:update:1.1.1'
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
+    implementation 'io.netty:netty-all:5.0.0.Alpha2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
