新增数据迁移（有BUG）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.github.czy1121:update:1.1.1'
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
     implementation 'io.netty:netty-all:5.0.0.Alpha2'
+    implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
